--- a/package.json
+++ b/package.json
@@ -21,10 +21,16 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/mongoose": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/schedule": "^4.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "install": "^0.13.0",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.1.1",
     "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.8",
     "reflect-metadata": "^0.1.13",
