--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 DB_URI=mongodb+srv://emailisys:emailisys@cluster0.z7wzdls.mongodb.net/?retryWrites=true&w=majority
+# DB_URI=mongodb://localhost:27017/Users
 
 JWT_SECRET=codingwithabbas
 JWT_EXPIRES=3d
